<resources>
    <string name="app_name">LisMusic</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="password">Enter your password</string>
    <string name="email">Enter your email or username</string>
    <string name="new_account">Don´t you have an account? sing up here! </string>
    <string name="resetPassword">Reset password </string>
    <string name="facebook_app_id">566789227366132</string>
    <string name="fb_login_protocol_scheme">fb566789227366132</string>
    <string name="ip">10.0.2.2</string>

    <string name="terms_and_conditions"> Al aceptar los terminos y condiciones de LisMusic nos otorgas el permiso de guardar tus datos ingresado con fines estadísticos para ir mejorando tu experiencia con nosotros.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="searchType">
        <item>Artists</item>
        <item>Albums</item>
        <item>Tracks</item>
        <item>Playlists</item>
    </string-array>
</resources>
