<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.uv.lismusicjava.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.uv.lismusicjava.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.uv.lismusicjava.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_playlistLibraryFragment"
            app:destination="@id/navigation_playlistLibraryFragment" />
        <action
            android:id="@+id/action_navigation_library_to_artistLibraryFragment"
            app:destination="@id/navigation_artistLibraryFragment" />
        <action
            android:id="@+id/action_navigation_library_to_albumLibraryFragment"
            app:destination="@id/navigation_albumLibraryFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_playlistLibraryFragment"
        android:name="com.uv.lismusicjava.ui.library.playlist.PlaylistLibraryFragment"
        android:label="fragment_playlist_library"
        tools:layout="@layout/fragment_playlist_library" />
    <fragment
        android:id="@+id/navigation_artistLibraryFragment"
        android:name="com.uv.lismusicjava.ui.library.ArtistLibraryFragment"
        android:label="fragment_artist_library"
        tools:layout="@layout/fragment_artist_library" />
    <fragment
        android:id="@+id/navigation_albumLibraryFragment"
        android:name="com.uv.lismusicjava.ui.library.Album.AlbumLibraryFragment"
        android:label="fragment_album_library"
        tools:layout="@layout/fragment_album_library" />
</navigation>
